		avoid focus conflicts.
		Fixes for -fstrict-aliasing and other recent warnings.
		Added fill_waveform rc variable and corresponding menu option
		(/View/Show Filled High Values) to allow filling in the lower
		portion of high values for increased visibility.
3.3.80	17mar17	Added "/View/Mouseover Copies To Clipboard" menu option to
		allow copying values into the clipboard so they can be pasted
		into text editors, etc.
3.3.81	09jun17	Added max_fsdb_trees environment variable.
		Fixed -C option so it is persistent across new tabs.		
		Integrated updated GHW reader code.
3.3.82	02jul17	Get sys_fst working with VCS VPI.
		Added string concatenations for vectors.
		Added asserts to ghwlib.c to make scan-view clean.
3.3.83	04aug17	Preserve search type for regex search across reloads or
		close/reopens of regex search widget.
		Update local libz to current version.		
3.3.84	03sep17	Updated FSDB reader with experimental FST tree build
		routines for faster init.
		Removed warnings found when compiling with -Wshadow.
		Automatically enable --comphier for FST/FSDB/AE2 if facility
		count reaches 500000.  This is to reduce memory consumption
		for traces with very many signals.  Added disable_auto_comphier
		to override this behavior.
		Fix null pointer sent to gtk_clipboard_set_text() for
		mouseover to clipboard cut ops.
3.3.85	06sep17	Fix integer type in GHW loader so integer value changes are
		not stored as a string. This then allows bitwise manipulations
		of integers.
3.3.86	03oct17	Added recurse import function (found before only in the hier
		search) into the SST.  
		Removed obsolete bundle functionality from SST as recurse 
		import more accurately imports recursively.
		Made entrybox taller (using -1) as recent versions of
		gnome have taller window titlebars and the widget was not
		tall enough.
3.3.87	12dec17	Added missing prototype for ghw_read_sm_hdr in ghwlib.h.
		Made intptr_t changes vs long during casting for win64.
		Warnings fixes.